--- a/themes/blog/layouts/_default/baseof.html
+++ b/themes/blog/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ or site.Language.LanguageCode site.Language.Lang }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
-  <title>Blog</title>
+  <title>rjma</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
