--- a/themes/blog/layouts/_default/home.html
+++ b/themes/blog/layouts/_default/home.html
@@ -1,10 +1,12 @@
 {{ define "main" }}
-  {{ .Content }}
-  {{ range site.RegularPages }}
-    <article>
-      <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-      <p>{{ partial "date.html" . }}</p>
-      <p>{{ .Summary }}</p>
-    </article>
-  {{ end }}
+    {{ .Content }}
+    {{ range site.RegularPages }}
+        <article class="post-listing">
+            <h2 class="post-heading">
+                {{ partial "date.html" . }}
+                <a class="post-title" href="{{ .RelPermalink }}">{{ .LinkTitle }}</a>
+            </h2>
+            <p>{{ .Summary }}</p>
+        </article>
+    {{ end }}
 {{ end }}
