--- a/themes/blog/layouts/partials/date.html
+++ b/themes/blog/layouts/partials/date.html
@@ -1,3 +1,3 @@
-  {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-  {{ $dateHuman := .Date | time.Format ":date_long" }}
-  <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+{{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
+{{ $dateHuman := .Date | time.Format "20060102" }}
+<time class="post-date" datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
